--- a/Posicionamento CSS/index.html
+++ b/Posicionamento CSS/index.html
@@ -10,77 +10,87 @@
 
 <body>
     <!-- Titulo -->
-    <div class="head">
+    <header class="header">
         <img src="imagens/bikcraft.svg">
-    </div>
 
-    <!-- Menu -->
-    <div class="menu">
-        <a href=""> SOBRE </a>
-        <a href=""> PRODUTOS </a>
-        <a href=""> LOJAS </a>
-        <a href=""> CONTATO </a>
-    </div>
+
+        <!-- Menu -->
+        <nav aria-label="primária">
+            <ul class="menu">
+                <li> <a href=""> SOBRE </a> </li>
+                <li> <a href=""> PRODUTOS </a> </li>
+                <li> <a href=""> LOJAS </a> </li>
+                <li> <a href=""> CONTATO </a> </li>
+            </ul>
+        </nav>
+    </header>
 
     <!-- Bicicletas -->
-    <div class="principal">
+    <main>
 
-        <!-- Textos a Esquerda -->
-        <div class="bloco1">
+        <article class="principal">
+            <!-- Textos a Esquerda -->
+            <div class="bloco1" aria-labelledby="primeiro-bloco">
 
-            <span class="detalhe"></span>
+                
 
+                <h1 id="primeiro-bloco">
+                    Bicicletas Feitas a Mão
+                </h1>
+                <p>
+                    A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores
+                    acessórios da marca.
+                </p>
 
-            <h1>
-                Bicicletas Feitas a Mão
-            </h1>
-            <p>
-                A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores
-                acessórios da marca.
-            </p>
-
-            <a href="" class="stylebottom">VER MAIS</a>
-
-
-        </div>
-
-        <!-- Bicicleta -->
-        <div>
-            <img src="imagens/bicicleta.jpg" class="imgBike">
-        </div>
-
-        <!-- Vantagens -->
-        <div>
-            <p class="vantagens">VANTAGENS BIKCRAFT</p>
-        </div>
-
-        <!-- Texto a Direita -->
-        <div class="final">
-            <div>
-                <img src="imagens/eletrica.svg" class="destaque">
-                <span>Motor Elétrico</span>
-
-                <p>Permite você viajar distâncias inimagináveis com a sua bike</p>
+                <a href="" class="botao">VER MAIS</a>
 
             </div>
 
+            <!-- Bicicleta -->
             <div>
-                <img src="imagens/velocidade.svg" class="destaque">
-                <span>40 Km/h</span>
+                <img src="imagens/bicicleta.jpg" class="imgBike">
+            </div>
+        </article>
 
-                <p>A mais rápida bicicleta elétrica disponível hoje no mercado</p>
+        <article class="principal" aria-labelledby="segundo-bloco">
 
+            <!-- Vantagens -->
+            <div id="segundo-bloco">
+                <p class="vantagens">VANTAGENS BIKCRAFT</p>
             </div>
 
-            <div>
-                <img src="imagens/rastreador.svg" class="destaque">
-                <span>Rastreador</span>
+            <!-- Texto a Direita -->
+            <ul class="final">
+                <li>
+                    <img src="imagens/eletrica.svg" class="destaque">
+                    <span>Motor Elétrico</span>
 
-                <p>Rastreador e sistema anti-furto para garantir o seu sossego</p>
+                    <p>Permite você viajar distâncias inimagináveis com a sua bike</p>
 
-            </div>
-        </div>
+                </li>
 
-    </div>
+                <li>
+                    <img src="imagens/velocidade.svg" class="destaque">
+                    <span>40 Km/h</span>
+
+                    <p>A mais rápida bicicleta elétrica disponível hoje no mercado</p>
+
+                </li>
+
+                <li>
+                    <img src="imagens/rastreador.svg" class="destaque">
+                    <span>Rastreador</span>
+
+                    <p>Rastreador e sistema anti-furto para garantir o seu sossego</p>
+
+                </li>
+            </ul>
+        </article>
+    </main>
+
+    <footer class="rodape">
+        <p>Bikcraft. Alguns Direitos Reservados.</p>
+    </footer>
 </body>
+
 </html>
