--- a/Bikcraft/index.html
+++ b/Bikcraft/index.html
@@ -11,7 +11,7 @@
 
 
     <header class="header">
-        <img src="imagens/bikcraft.svg" alt="Bikcraft">
+        <img src="./imagens/bikcraft.svg" alt="Bikcraft">
 
         <nav aria-label="primária">
             <ul class="menu">
@@ -33,7 +33,7 @@
                 <a href="/" class="botao">Ver mais</a>
             </div>
             <div>
-                <img src="/Bikcraft/imagens/bicicleta.jpg" alt="">
+                <img src="/Bikcraft/imagens/bicicleta.jpg   " alt="">
             </div>
         </article>
 
