--- a/Doceria/index.html
+++ b/Doceria/index.html
@@ -13,13 +13,13 @@
 
         <nav>
             <ul class="menu">
-                <li>Sobre</li>
-                <li>Bolos</li>
-                <li>Pé de Moça</li>
-                <li>Cocadas</li>
+                <li><a href="">Sobre</a></li>
+                <li><a href="">Bolos</a></li>
+                <li><a href="">Pé de Moça</a></li>
+                <li><a href="">Cocadas</a></li>
             </ul>
         </nav>
-        
+
     </header>
 </body>
 
